--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 					### 🏢 **Employeur**
 				</textarea>
 			</section>
-			<section data-background-iframe="https://petal-health.com" data-background-interactive>
+			<section>
+				<a href="https://petal-health.com" target="_blank">
+					<img src="https://blog.petal-health.com/hs-fs/hubfs/_Petal%202021/logos%20Petal/petal_officiel-logo-full-color-rgb.png?width=500&name=petal_officiel-logo-full-color-rgb.png"/>
+				</a>
 			</section>
 			<section data-markdown>
 				<textarea data-template>
@@ -211,41 +214,74 @@
 			</section>
 		</section>
 
-			<section data-markdown data-separator-vertical="^\n--\n$">
+		<section>
+			<section data-markdown>
 				<textarea data-template>
 					### ☕️ Quotidien
 
-					--
+					---
 
-					### Développment
+					#### 📝 Exemple
 
-					--
 
-					### Daily ou Scrum
-
-					--
-
-					### Review de code
-
-					<img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="150px">
-
-					--
-
-					### Coopération diverse
-
-					Aider ou répondre à des questions
-
-					Pair programming
-
-					--
-
-					### Plusieurs autres types de réunions
-
-					Définition des spécifications des produits
-
-					Rencontre technique entre développeurs
+					![](https://pbs.twimg.com/media/EaAcoVaXsAIudM3.png)
 				</textarea>
 			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					### 📝 Planification
+
+					---
+
+					![](https://wac-cdn-2.atlassian.com/image/upload/f_auto,q_auto/dam/jcr:858144d1-e857-4ab8-8861-2a71112e7a37/JSW-tour-board.png?cdnVersion=81)
+				</textarea>
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					### 📝 Développment
+
+					---
+
+					![image](https://user-images.githubusercontent.com/7858787/141706399-e1823608-ec21-47d8-a5d2-39171315df45.png)
+				</textarea>
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					### 📝 Review
+
+					![image](https://user-images.githubusercontent.com/7858787/141706395-18e2d856-cdc5-413a-a181-d693f077b796.png)
+				</textarea>
+			</section>
+		</section>
+
+		<section data-markdown data-separator-vertical="^\n--\n$">
+			<textarea data-template>
+				### ☕️ Quotidien
+
+				--
+
+				### Daily ou Scrum
+
+				--
+
+				### Coopération diverse
+
+				Aider ou répondre à des questions
+
+				Pair programming
+
+				--
+
+				### Plusieurs autres types de réunions
+
+				Définition des spécifications des produits
+
+				Rencontre technique entre développeurs
+			</textarea>
+		</section>
 
 		<section>
 			<section data-markdown>
@@ -291,7 +327,6 @@
 				</section>
 		</section>
 
-
 		<section data-markdown>
 				<textarea data-template>
 					## 🔎 **En détail**
@@ -316,24 +351,8 @@
 					---
 
 					Premier "programme": Animation sur une calculatrice graphique
-				</textarea>
-			</section>
-
-			<section data-markdown>
-				<textarea data-template>
-					## 💡 **Pourquoi développeur**
-
-					---
 
 					Porte ouverte ULaval génie électrique/informatique/logiciel
-				</textarea>
-			</section>
-
-			<section data-markdown>
-				<textarea data-template>
-					## 💡 **Pourquoi développeur**
-
-					---
 
 					La possibilité de réaliser un projet rapidement, sans coût, en toute autonomie
 				</textarea>
