--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 					Depuis 4 1/2 ans
 
-					270+ employers, 60+ développeurs
+					270+ employés, 60+ développeurs
 
 					Solution web médicaux administratifs
 				</textarea>
@@ -123,7 +123,7 @@
 
 		<section data-markdown>
 				<textarea data-template>
-					### 🔎 Développeur logicel
+					### 🔎 Développeur logiciel
 				</textarea>
 		</section>
 
@@ -134,7 +134,7 @@
 
 					---
 
-					* Créativités
+					* Créativité
 					* Intuition
 					* Débrouillardise
 					* Patience
@@ -144,7 +144,7 @@
 
 			<section data-markdown>
 				<textarea data-template>
-					### 💪️ Aptitutes
+					### 💪️ Aptitudes
 
 					---
 
@@ -208,7 +208,7 @@
 
 					Service clients
 
-					Buiness intelligences
+					Informatique décisionnelle (BI)
 
 				</textarea>
 			</section>
@@ -240,7 +240,7 @@
 
 			<section data-markdown>
 				<textarea data-template>
-					### 📝 Développment
+					### 📝 Développement
 
 					---
 
@@ -277,7 +277,7 @@
 
 				### Plusieurs autres types de réunions
 
-				Définition des spécifications des produits
+				Définition les spécifications des produits
 
 				Rencontre technique entre développeurs
 			</textarea>
@@ -320,9 +320,9 @@
 
 					---
 
-					Certain stress
+					Stress
 
-					Fatiquant mentalement
+					Fatigant mentalement
 				</textarea>
 				</section>
 		</section>
@@ -366,11 +366,11 @@
 
 					---
 
-					mai 2017 : Développeur Backend Rails chez Petal Health
+					Mai 2017 : Développeur Backend Rails chez Petal Health
 
-					févirer 2019 : Squad lead (Scrum Master + Développeur)
+					Févirer 2019 : Squad lead (Scrum Master + Développeur)
 
-					septembre 2019 : Chapter Lead
+					Septembre 2019 : Chapter Lead
 				</textarea>
 			</section>
 
@@ -408,7 +408,7 @@
 
 					Diriger les bonnes pratiques et standard
 
-					Être à jour avec les nouvelles technologies, explorer ce qui ce fait dans l'industrie
+					Être à l'affût des nouvelles technologies
 
 					Éteindre des feux
 				</textarea>
